k8s/overlays/staging/ingress-patch.yaml
# Ingress and ManagedCertificate patch for Staging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hta-calibration-ingress
  namespace: hta-calibration
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: hta-calibration-staging-ip
    networking.gke.io/managed-certificates: hta-calibration-cert
